--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
       <ul>
         <li><a href='index.html'>HOME</a></li>
-        <li><a href='https://www.instagram.com/lil_z4y/'>INSTAGRAM</a></li>
-        <li><a href='https://open.spotify.com/user/12123469905?si=BZgnl9K6RiSdui_LCFnZkA'>MUSIC</a></li>
-        <li><a href='https://twitter.com/lilz4y'>TWITTER</a></li>
-        <li><a href='https://www.grailed.com/ridaan'>SHOP</a></li>
+        <li><a href='#'>ABOUT</a></li>
+        <li><a href='#'>RESUME</a></li>
+        <li><a href='#'>CONTACT</a></li>
+
+
 
       </ul>
       <div id='sidebar-button'>
