--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href='index.html'>HOME</a></li>
         <li><a href='#'>ABOUT</a></li>
         <li><a href='#'>RESUME</a></li>
-        <li><a href='contact.php'>CONTACT</a></li>
+        <li><a href='contact.html'>CONTACT</a></li>
 
 
 
