--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title> Zayaan Islam </title>
+    <title> Welcome </title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -9,9 +9,9 @@
 
       <ul>
         <li><a href='index.html'>HOME</a></li>
-        <li><a href='#'>ABOUT</a></li>
+        <li><a href='about.html'>ABOUT</a></li>
         <li><a href='#'>RESUME</a></li>
-        <li><a href='contact.html'>CONTACT</a></li>
+        <li><a href='outfits.html'>OUTFITS</a></li>
 
 
 
